cmake_minimum_required(VERSION 3.16)
project(offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer algo1.cpp algo2.cpp algo4.cpp test.cpp algo6.cpp Utilities/List.cpp Utilities/List.h Utilities/BinaryTree.cpp Utilities/BinaryTree.h algo7.cpp algo8.cpp algo9.cpp algo9_2.cpp algo10.cpp algo11.cpp algo12.cpp algo13.cpp algo14.cpp)